--- a/log-in.html
+++ b/log-in.html
@@ -1,31 +1,38 @@
-<!doctype html>
-<HTML>
-    <head>
-        <meta charset="utf-8">
-        <title> Instagram Log-In Page </title>
-        <script>
-            alert {
-
-            }
-        </script>
-        <style>
-            .logo{
-                font-family: Georgia, 'Times New Roman', Times, serif;
-            }
-            head,body {
-                width: 100vw;
-                height: 100vh;
-            }
-
-        </style>
-    </head>
-    <body>
-        <h1>
-            <div class = "logo"> Instagram </span>
-        </h1>
-        ID <input type="text" name="my_name" size="20">
-        PASSWORD <input type="password" name="my_password" size="20">
-
-        <input type="text" name="my_name" size="20" value="수정불가" readonly>
-    </body>
-</HTML>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Instagram Log-In Page</title>
+    <script></script>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="log-in.css" />
+    <style>
+      .logo {
+        font-family: Georgia, 'Times New Roman', Times, serif;
+      }
+    </style>
+  </head>
+  <body>
+    <div>
+      <div class="first">
+        <div class="logo">1</div>
+        <div class="input">2</div>
+        <div class="login-btn">3</div>
+        <div class="seperate-bar">4</div>
+        <div class="login-facebook">5</div>
+        <div class="find-pw">6</div>
+      </div>
+      <div class="second">
+        <div class="desc">7</div>
+        <div class="sign-up">8</div>
+      </div>
+      <div class="footer">
+        <div class="footer-text">Get the app.</div>
+        <div class="footer-img">
+          <img class="img1" src="./public/image/appstore.png" />
+          <img class="img2" src="./public/image/googleplay.png" />
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
