--- a/log-in.html
+++ b/log-in.html
@@ -3,36 +3,49 @@
   <head>
     <meta charset="utf-8" />
     <title>Instagram Log-In Page</title>
-    <script>
-    </script>
+    <script></script>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="log-in.css" />
+    <style>
+      a:link, a:visited {
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body>
     <div>
       <div class="first">
-        <div class="logo"> <a href="https://www.instagram.com/">Instagram</a></div>
-          <div class="log-in">
-            <input type="id" type="text" placeholder="전화번호, 사용자 이름 또는 이메일">
-            <input type="password" placeholder="비밀번호"></div>
+        <div class="logo">
+          <a href="https://www.instagram.com/">Instagram</a>
+        </div>
+        <div class="log-in">
+          <input class="id" type="text" placeholder="전화번호, 사용자 이름 또는 이메일" />
+          <input class="password" type="password" placeholder="비밀번호" />
+        </div>
         <div class="login-btn">
-          <input type="button" value="로그인" onclick="alert('씨발')">
+          <input class="button" type="button" value="로그인" onclick="alert('로그인 되었습니다.')">
         </div>
         <div class="separate-bar">
-          <div class="first-line">──────</div>
+          <div class="first-line" style="color:rgb(210, 210, 210)">────────</div>
           <div class="second-text">또는</div>
-          <div class="last-line">──────</div></div>
+          <div class="last-line" style="color:rgb(210, 210, 210)">────────</div>
+        </div>
         <div class="login-facebook">
-          <img class="facebook-image" src="C:\Users\ASUS\Desktop\Algorithm-practice\페이스북.png"/>
-          <div class="facebook-login-text"><a href="https://www.facebook.com/">Facebook으로 로그인</a></div></div>
-        <div class="find-pw"  style="border: 1px gray;">비밀번호를 잊으셨나요?</div></div>
+          <img class="facebook-image" src="./페이스북.png" />
+          <div class="facebook-login-text">
+            <a href="https://www.facebook.com/">Facebook으로 로그인</a>
+          </div>
+        </div>
+        <div class="find-pw"  style="border: 1px gray;">비밀번호를 잊으셨나요?</div>
       </div>
 
       <div class="second">
         <div class="desc">계정이 없으신가요?</div>
-        <div class="sign-up"><a href="https://www.instagram.com/">가입하기</a></div>
+        <div class="sign-up">
+          <a href="https://www.instagram.com/">가입하기</a>
+        </div>
       </div>
-
+    </div>
       <div class="footer">
         <div class="footer-text">앱을 다운로드하세요.</div>
         <div class="footer-img">
@@ -40,6 +53,5 @@
           <img class="img2" src="./public/image/googleplay.png" />
         </div>
       </div>
-    </div>
   </body>
 </html>
