--- a/log-in.html
+++ b/log-in.html
@@ -6,29 +6,38 @@
     <script></script>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="log-in.css" />
-    <style>
-      a:link, a:visited {
-        text-decoration: none;
-      }
-    </style>
+    <link rel="script" href="submit-check.js" />
   </head>
   <body>
-    <div>
+    <div class="whole">
       <div class="first">
         <div class="logo">
-          <a href="https://www.instagram.com/">Instagram</a>
+          <a href="https://www.instagram.com/"> Instagram</a>
         </div>
         <div class="log-in">
-          <input class="id" type="text" placeholder="전화번호, 사용자 이름 또는 이메일" />
+          <input
+            class="id"
+            type="text"
+            placeholder="전화번호, 사용자 이름 또는 이메일"
+          />
           <input class="password" type="password" placeholder="비밀번호" />
         </div>
         <div class="login-btn">
-          <input class="button" type="button" value="로그인" onclick="alert('로그인 되었습니다.')">
+          <input
+            class="button"
+            type="submit"
+            value="로그인"
+            onclick="alert('로그인 되었습니다.')"
+          />
         </div>
         <div class="separate-bar">
-          <div class="first-line" style="color:rgb(210, 210, 210)">────────</div>
+          <div class="first-line" style="color: rgb(210, 210, 210)">
+            ────────
+          </div>
           <div class="second-text">또는</div>
-          <div class="last-line" style="color:rgb(210, 210, 210)">────────</div>
+          <div class="last-line" style="color: rgb(210, 210, 210)">
+            ────────
+          </div>
         </div>
         <div class="login-facebook">
           <img class="facebook-image" src="./페이스북.png" />
@@ -36,7 +45,9 @@
             <a href="https://www.facebook.com/">Facebook으로 로그인</a>
           </div>
         </div>
-        <div class="find-pw"  style="border: 1px gray;">비밀번호를 잊으셨나요?</div>
+        <div class="find-pw" style="border: 1px gray">
+          비밀번호를 잊으셨나요?
+        </div>
       </div>
 
       <div class="second">
@@ -45,7 +56,6 @@
           <a href="https://www.instagram.com/">가입하기</a>
         </div>
       </div>
-    </div>
       <div class="footer">
         <div class="footer-text">앱을 다운로드하세요.</div>
         <div class="footer-img">
@@ -53,5 +63,6 @@
           <img class="img2" src="./public/image/googleplay.png" />
         </div>
       </div>
+    </div>
   </body>
 </html>
